[package]
name = "pixle"
version = "0.1.2"
edition = "2024"

[dependencies]
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
glam = "0.25"
egui = "0.26"
egui-winit = "0.26"
egui-wgpu = "0.26"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.24"
walkdir = "2"
